--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -21,6 +21,7 @@ $spacing-xxl: 4rem; // 48px
 
 // Typography
 $font-size-base: 1rem; // 16px
+$font-size-xs: 0.5rem;
 $font-size-sm: 0.875rem; // 14px
 $font-size-lg: 1.25rem; // 20px
 $font-size-xl: 2.0rem; // 24px
